# agentup-brave-search

./: .gitignore  CLAUDE.md  README.md  example-agentup.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: security.yml
src/agentup_brave/: plugin.py
src/brave/: __init__.py  plugin.py
tests/: test_brave.py
