[project]
name = "agentup-brave"
version = "0.4.0"
description = "A plugin that provides Brave Search functionality"
authors = [
    { name = "Luke Hinds", email = "luke@rdrocket.com" }
]
requires-python = ">=3.10"
dependencies = [
    "agentup>=0.5.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."agentup.plugins"]
brave_search = "brave.plugin:BraveSearchPlugin"

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["UP"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brave"]

# Include static files in the wheel
[tool.hatch.build.targets.wheel.force-include]
"static" = "static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
